--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
 		"@stripe/react-stripe-js": "^1.6.0",
 		"@stripe/stripe-js": "^1.20.3",
 		"axios": "^0.21.1",
+		"chart.js": "^3.7.0",
 		"classnames": "^2.3.1",
+		"faker": "^5.5.3",
 		"google-map-react": "^2.1.10",
 		"next": "11.0.1",
 		"qrcode": "^1.5.0",
 		"react": "17.0.2",
+		"react-chartjs-2": "^4.0.0",
 		"react-dom": "17.0.2",
 		"react-hook-form": "^7.3.4",
 		"react-image-crop": "^9.0.5",
